# pyinjector-rs

./: Cargo.toml  LICENSE  README.md
docs/: README.md
src/: error.rs  injector.rs  main.rs  pe_parser.rs  process_ops.rs  python.rs  shellcode.rs
